projects/vb6parse/snapshots/tests/invalid_syntax/mismatched_keywords/for_with_wend_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/mismatched_keywords.rs
expression: "failures.iter().map(|f| format!(\"{f:?}\")).collect::<Vec<_>>()"
---
- "ErrorDetails { source_name: \"test.bas\", source_content: \"\\nSub Test()\\n    For i = 1 To 10\\n        Debug.Print i\\n    Wend\\nEnd Sub\\n\", error_offset: 62, line_start: 5, line_end: 6, kind: Parser(UnexpectedTokens { expected: [\"statement\"], found: [WendKeyword] }), severity: Error, labels: [], notes: [] }"
- "ErrorDetails { source_name: \"test.bas\", source_content: \"\\nSub Test()\\n    For i = 1 To 10\\n        Debug.Print i\\n    Wend\\nEnd Sub\\n\", error_offset: 70, line_start: 6, line_end: 7, kind: Parser(UnexpectedTokens { expected: [\"statement\"], found: [EndKeyword, Whitespace, SubKeyword] }), severity: Error, labels: [], notes: [] }"
