projects/vb6parse/snapshots/tests/invalid_syntax/mismatched_keywords/function_with_end_sub_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/mismatched_keywords.rs
expression: "failures.iter().map(|f| format!(\"{f:?}\")).collect::<Vec<_>>()"
---
- "ErrorDetails { source_name: \"test.bas\", source_content: \"\\nFunction Calculate(x As Integer) As Integer\\n    Calculate = x * 2\\nEnd Sub\\n\", error_offset: 75, line_start: 5, line_end: 5, kind: Parser(UnexpectedTokens { expected: [\"End Function\"], found: [EndKeyword, Whitespace, SubKeyword] }), severity: Error, labels: [], notes: [] }"
