projects/vb6parse/snapshots/tests/invalid_syntax/mismatched_keywords/if_with_end_select_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/mismatched_keywords.rs
expression: failure_messages
---
- "ErrorDetails { source_name: \"test.bas\", source_content: \"\\nSub Test()\\n    If x > 0 Then\\n        Debug.Print \\\"Positive\\\"\\n    End Select\\nEnd Sub\\n\", error_offset: 75, line_start: 5, line_end: 6, kind: Parser(UnexpectedTokens { expected: [\"statement\"], found: [EndKeyword, Whitespace, SelectKeyword] }), severity: Error, labels: [], notes: [] }"
