projects/vb6parse/snapshots/tests/invalid_syntax/mismatched_keywords/property_get_with_end_sub_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/mismatched_keywords.rs
expression: "failures.iter().map(|f| format!(\"{f:?}\")).collect::<Vec<_>>()"
---
- "ErrorDetails { source_name: \"test.bas\", source_content: \"\\nProperty Get Name() As String\\n    Name = m_name\\nEnd Sub\\n\", error_offset: 57, line_start: 5, line_end: 5, kind: Parser(UnexpectedTokens { expected: [\"End Property\"], found: [EndKeyword, Whitespace, SubKeyword] }), severity: Error, labels: [], notes: [] }"
