projects/vb6parse/snapshots/tests/invalid_syntax/mismatched_keywords/property_let_with_end_function_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/mismatched_keywords.rs
expression: "failures.iter().map(|f| format!(\"{f:?}\")).collect::<Vec<_>>()"
---
- "ErrorDetails { source_name: \"test.bas\", source_content: \"\\nProperty Let Value(newValue As Integer)\\n    m_value = newValue\\nEnd Function\\n\", error_offset: 77, line_start: 5, line_end: 5, kind: Parser(UnexpectedTokens { expected: [\"End Property\"], found: [EndKeyword, Whitespace, FunctionKeyword] }), severity: Error, labels: [], notes: [] }"
